# tlang

./: .gitignore  .stylelintignore  CODEBASE_EXPLORATION.md  Cargo.toml  GC_INTEGRATION_GUIDE.md  Makefile  Makefile.toml  QUICK_REFERENCE.md  README.md  TODO.md  big.tlang  debug_hir.tlang  debug_test.rs  eslint.config.mjs  nested_test.tlang  non-exhaustive-enum.tlang  package-lock.json  package.json  rust-toolchain.toml  simple_test.tlang  stylelint.config.js  test_binary.tlang  test_complex_nested.tlang  test_debug.rs  test_direct_block.tlang  test_function_args.tlang  test_generic_flattening.tlang  test_let_block.tlang  test_let_complex.tlang  test_match.tlang  test_match_working.tlang  test_nested_conditions.tlang  test_nested_if.tlang  test_return_nested.tlang  test_simple_match.tlang  tsconfig.json  update_tests.py
crates/tlang_analysis/: Cargo.toml
crates/tlang_analysis/src/: find_node.rs  inlay_hints.rs  lib.rs  member_resolution.rs  query.rs  signature_help.rs  symbol_index.rs  typed_hir.rs
crates/tlang_ast/: Cargo.toml  README.md
crates/tlang_ast/src/: intern.rs  keyword.rs  lib.rs  macros.rs  node.rs  node_id.rs  span.rs  symbols.rs  token.rs  visit.rs  visit_mut.rs
crates/tlang_ast_lowering/: Cargo.toml  README.md  TODO.md
crates/tlang_ast_lowering/src/: expr.rs  lib.rs  loop.rs  scope.rs  stmt.rs
crates/tlang_ast_lowering/tests/: enum_param_inference.rs  enum_slots.rs  for_loop.rs  generics.rs  lowering_errors.rs  path_resolution.rs  protocol_self_dispatch.rs  visitor_test.rs
crates/tlang_bindings_js/: Cargo.toml  Makefile.toml  README.md  build.rs  package.json
crates/tlang_bindings_js/pkg/: package.json
crates/tlang_bindings_js/src/: codemirror.rs  compiler.rs  interpreter.rs  lib.rs  tlang.rs  ts_types.rs
crates/tlang_bindings_js/tests/: node.rs
crates/tlang_bindings_js/wasm/: tlang_bindings_js.d.ts  tlang_bindings_js.js  tlang_bindings_js_bg.wasm  tlang_bindings_js_bg.wasm.d.ts
crates/tlang_cli/: Cargo.toml  README.md
crates/tlang_cli/src/: error.rs  main.rs
crates/tlang_cli_js/: Cargo.toml  Makefile.toml
crates/tlang_cli_js/examples/: binary_search.tl  enum.tl  factorial.tl  fibonacci.tl  filter_map.tl  foldl.tl  is_palindrome.tl  list_operations.tl  list_operations.tlang  match.tl  maximum_depth.tl  pipeline.tl  quicksort.tl  quicksort_predicate.tl  quicksort_predicate.tlang  squares.tl  squares.tlang  struct.tlang  struct_vector.tl  struct_vector.tlang  sum.tl  sum.tlang  zip.tl
crates/tlang_cli_js/js/: stdlib.js
crates/tlang_cli_js/src/: main.rs
crates/tlang_codegen_js/: Cargo.toml  README.md
crates/tlang_codegen_js/src/: anf_transformer.rs  binary_operator_generator.rs  boolean_return_simplification.rs  builtins.rs  enum_generator.rs  error.rs  expr_generator.rs  expression_transformer.rs  function_generator.rs  generator.rs  generator_test.rs  hir_js_opt_group.rs  hir_js_pass.rs  hir_normalizer.rs  js_anf_return_opt.rs  js_anf_transform.rs  js_boolean_return_simplification.rs  js_expr_utils.rs  js_hir_opt.rs  lib.rs  name_map.rs  pattern_match_generator.rs  refactored_hir_js_pass.rs  return_statement_pass.rs  scope.rs  simplified_hir_js_pass.rs  stmt_generator.rs  struct_generator.rs  transformation_strategies.rs
crates/tlang_codegen_js/std/: collections.js  collections.tlang  globals.js  globals.pre.js  helpers.js  lib.tl  lib.tlang  lib_native.js  math.tlang  option.tlang  protocols.tlang  regex.js  result.tlang  string.js  string.tlang  string_buf.js  temporal.js
crates/tlang_codegen_js/tests/: debug_anf.rs  debug_tail_call_test.rs  generator.rs  generator_cast.rs  generator_enum.rs  generator_expression_flattening.rs  generator_fn.rs  generator_fn.rs.backup  generator_fn_rec.rs  generator_for_loop.rs  generator_let.rs  generator_match.rs  generator_pipeline.rs  generator_protocol.rs  generator_struct.rs  generator_struct_fn.rs  generator_visibility.rs  hir_js_pass.rs  refactored_hir_js_pass.rs  return_statement_pass.rs  simple_test.rs  tail_call_self_reference_validation.rs  test_enum_method.rs
crates/tlang_core/: Cargo.toml  README.md
crates/tlang_core/src/: lib.rs
crates/tlang_core/tlang_interpreter/: Cargo.toml
crates/tlang_core/tlang_memory/: Cargo.toml
crates/tlang_core/tlang_stdlib/: Cargo.toml
crates/tlang_core/tlang_vm/: Cargo.toml
crates/tlang_diagnostics/: Cargo.toml
crates/tlang_diagnostics/src/: lib.rs
crates/tlang_hir/: Cargo.toml  README.md
crates/tlang_hir/src/: fold.rs  hir.rs  lib.rs  span_index.rs  visit.rs
crates/tlang_hir/tests/: span_index.rs
crates/tlang_hir_opt/: Cargo.toml  README.md
crates/tlang_hir_opt/src/: anf_transform.rs  constant_folding.rs  constant_propagation.rs  dead_code_elimination.rs  exhaustive_enum_match.rs  free_variable_analysis.rs  hir_opt.rs  lib.rs  path_resolution.rs  scope_data_update.rs  tail_call_validation.rs  unused_symbol_detection.rs
crates/tlang_hir_opt/tests/: .constant_folding.rs.pending-snap  anf_transform.rs  constant_folding.rs  dead_code_elimination.rs  exhaustive_enum_match.rs  hir_scope_data.rs  path_resolution.rs  slot_allocation.rs  symbol_resolution.rs  tail_call_validation.rs  unused_symbol_detection.rs
crates/tlang_interpreter/: Cargo.toml
crates/tlang_interpreter/src/: lib.rs  macros.rs  main.rs  resolver.rs  scope.rs  shape.rs  state.rs  stdlib.rs  value.rs
crates/tlang_lsp_server/: Cargo.toml
crates/tlang_lsp_server/src/: diagnostics.rs  document_store.rs  find_node.rs  lib.rs  main.rs  semantic_tokens.rs  server.rs
crates/tlang_lsp_server/tests/: smoke_test.rs
crates/tlang_modules/: Cargo.toml
crates/tlang_modules/src/: compiler.rs  lib.rs  module_graph.rs  module_path.rs  module_tree.rs  resolver.rs
crates/tlang_modules/tests/: integration_tests.rs
crates/tlang_octarine/: Cargo.toml
crates/tlang_octarine/examples/: README.md  tee.tlang  (+7 more)
crates/tlang_parser/: Cargo.toml  Makefile.toml  README.md
crates/tlang_runtime/: Cargo.toml  README.md
crates/tlang_semantics/: Cargo.toml  README.md
crates/tlang_typeck/: Cargo.toml
crates/tlang_types/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+1106 files in other folders)
