[workspace]
members = [
  "crates/tlang_runtime/tlang_memory",
  "crates/tlang_runtime/tlang_stdlib",
  "crates/tlang_runtime/tlang_interpreter",
  "crates/*",
]
exclude = ["crates/tlang_runtime"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
ctor = "0.6"
env_logger = "0.11"
indoc = "2"
insta = { version = "1", features = ["redactions", "ron"] }
inventory = "0.3"
pretty_assertions = { version = "1", features = ["unstable"] }
serde = { version = "1", features = ["derive", "rc"] }
ron = "0.11.0"

[workspace.dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]

[profile.dev]
# Disable incremental compilation to avoid issues with the inventory crate not
# picking up native functions associated in the interpreter crate itself, when
# building the wasm bindings.
incremental = false

[profile.release]
# Disabling parallel codegen speeds enables to analyze the generated code with focus on smallest file size.
# This shaved off around 20kb from the final binary size, at the time of writing.
codegen-units = 1
lto = true

[profile.dev.package]
insta.opt-level = 3
pretty_assertions.opt-level = 3
similar.opt-level = 3

[workspace.lints.clippy]
semicolon_if_nothing_returned = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
missing_panics_doc = "warn"
needless_continue = "warn"
too_many_lines = "warn"
