[workspace]
members = [
  "crates/tlang_core/tlang_memory",
  "crates/tlang_core/tlang_stdlib",
  "crates/tlang_core/tlang_interpreter",
  "crates/tlang_core/tlang_vm",
  "crates/*",
  "tests/runner",
  "xtask",
]
exclude = [
  "crates/tlang_parser/fuzz",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.13"
ctor = "0.10"
env_logger = "0.11"
indoc = "2"
insta = { version = "1", features = ["redactions", "ron"] }
inventory = "0.3"
oxc_allocator = "0.128"
oxc_ast = { version = "0.123", features = ["serialize"] }
oxc_codegen = "0.123"
oxc_estree = { version = "0.123", features = ["serialize"] }
oxc_parser = "0.123"
oxc_sourcemap = "6"
oxc_span = "0.123"
pretty_assertions = { version = "1", features = ["unstable"] }
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
ron = "0.12"

[workspace.dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]

[profile.dev]
# Disable incremental compilation to avoid issues with the inventory crate not
# picking up native functions associated in the interpreter crate itself, when
# building the wasm bindings.
incremental = false

[profile.release]
# Disabling parallel codegen speeds enables to analyze the generated code with focus on smallest file size.
# This shaved off around 20kb from the final binary size, at the time of writing.
codegen-units = 1
lto = true

[profile.dev.package]
insta.opt-level = 3
pretty_assertions.opt-level = 3
similar.opt-level = 3
# Single codegen unit ensures all inventory::submit! constructors in tlang_stdlib
# are in one object file, so none get dead-stripped when the crate is linked.
tlang_stdlib.codegen-units = 1

[workspace.lints.clippy]
semicolon_if_nothing_returned = "warn"
explicit_iter_loop = "warn"
needless_pass_by_value = "warn"
missing_panics_doc = "warn"
needless_continue = "warn"
too_many_lines = "warn"
