[package]
name = "tlang_analysis"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
tlang_builtins_js = { path = "../tlang_builtins_js" }
tlang_builtins_vm = { path = "../tlang_builtins_vm" }
tlang_defs = { path = "../tlang_defs" }
tlang_diagnostics = { path = "../tlang_diagnostics" }
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_span = { path = "../tlang_span" }
tlang_typeck = { path = "../tlang_typeck" }

[lints]
workspace = true
