[package]
name = "tlang_ast"
version = "0.1.0"
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "tlang_span/serde", "tlang_intern/serde"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
tlang_intern = { path = "../tlang_intern" }
tlang_span = { path = "../tlang_span" }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
