[package]
name = "tlang_ast_lowering"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_hir = { path = "../tlang_hir" }
log = { workspace = true }

[dev-dependencies]
tlang_parser = { path = "../tlang_parser" }
tlang_hir_pretty = { path = "../tlang_hir_pretty" }
insta = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
