[package]
name = "tlang_codegen_js"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_span = { path = "../tlang_span" }

[dev-dependencies]
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
ctor = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
