[package]
name = "tlang_codegen_js"
version = "0.1.0"
edition.workspace = true

[dependencies]
oxc_allocator = "0.120"
oxc_ast = { version = "0.119", features = ["serialize"] }
oxc_codegen = "0.119"
oxc_sourcemap = "6"
oxc_estree = { version = "0.119", features = ["serialize"] }
oxc_span = "0.119"
tlang_ast = { path = "../tlang_ast" }
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_span = { path = "../tlang_span" }
tlang_symbols = { path = "../tlang_symbols" }

[dev-dependencies]
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
ctor = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
