[package]
name = "tlang_codegen_js"
version = "0.1.0"
edition.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_codegen = { workspace = true }
oxc_sourcemap = { workspace = true }
oxc_estree = { workspace = true }
oxc_span = { workspace = true }
tlang_ast = { path = "../tlang_ast" }
tlang_intern = { path = "../tlang_intern" }
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_span = { path = "../tlang_span" }
tlang_defs = { path = "../tlang_defs" }

[dependencies.tlang_ast_lowering]
path = "../tlang_ast_lowering"

[dev-dependencies]
ctor = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
