[package]
name = "tlang_core"
version = "0.1.0"
edition.workspace = true
description = "Core vm crates for tlang, including memory management, standard library, and interpreter"

[dependencies]
tlang_interpreter = { path = "tlang_interpreter" }
tlang_memory = { path = "tlang_memory" }
tlang_stdlib = { path = "tlang_stdlib" }
tlang_vm = { path = "tlang_vm" }

[lints]
workspace = true
