[package]
name = "tlang_diagnostics"
version = "0.1.0"
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "tlang_span/serde"]

[dependencies]
codespan-reporting = { workspace = true }
tlang_parser = { path = "../tlang_parser" }
tlang_span = { path = "../tlang_span" }
serde = { workspace = true, optional = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
