[package]
name = "tlang_hir"
version = "0.1.0"
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "tlang_span/serde", "tlang_ast/serde", "tlang_defs/serde"]

[dependencies]
tlang_span = { path = "../tlang_span" }
tlang_ast = { path = "../tlang_ast" }
tlang_defs = { path = "../tlang_defs" }
serde = { workspace = true, optional = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
