[package]
name = "tlang_hir_opt"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_hir = { path = "../tlang_hir" }
tlang_hir_pretty = { path = "../tlang_hir_pretty" }
tlang_parser = { path = "../tlang_parser" }
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
tlang_ast = { path = "../tlang_ast" }
insta = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tlang_parser = { path = "../tlang_parser" }
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
env_logger = { workspace = true }
