[package]
name = "tlang_interpreter"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_interpreter"
path = "src/lib.rs"

[[bin]]
name = "tlangdi"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["stdlib", "rand"]
binary = ["tlang_ast_lowering"]
stdlib = []
rand = ["dep:rand"]

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_ast_lowering = { path = "../tlang_ast_lowering", optional = true }
tlang_hir = { path = "../tlang_hir" }
tlang_macros = { path = "../tlang_macros" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
log = { workspace = true }
env_logger = { workspace = true }
inventory = "0.3"
slab = "0.4"
rand = { version = "0.9", optional = true }

[dev-dependencies]
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
ctor = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }
