[package]
name = "tlang_lsp_server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tlang-lsp-server"
path = "src/main.rs"

[dependencies]
async-lsp = { version = "0.2", features = ["tokio"] }
futures = "0.3"
lsp-types = "0.97"
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tlang_ast = { path = "../tlang_ast" }
tlang_analysis = { path = "../tlang_analysis" }
tlang_defs = { path = "../tlang_defs" }
tlang_diagnostics = { path = "../tlang_diagnostics" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_span = { path = "../tlang_span" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
