[package]
name = "tlang_modules"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
tlang_defs = { path = "../tlang_defs" }
tlang_hir = { path = "../tlang_hir" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_span = { path = "../tlang_span" }

[dev-dependencies]
insta = { workspace = true }
tlang_codegen_js = { path = "../tlang_codegen_js" }
tlang_hir_opt = { path = "../tlang_hir_opt" }

[lints]
workspace = true
