[package]
name = "tlang_octarine"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_octarine"
path = "src/lib.rs"

[[bin]]
name = "octarine"
path = "src/main.rs"

[dependencies]
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
tokio = { version = "1", features = ["rt", "fs", "process", "net", "io-util", "io-std"] }
log = { workspace = true }
env_logger = { workspace = true }
tlang_macros = { path = "../tlang_macros" }
tlang_memory = { path = "../tlang_core/tlang_memory" }
tlang_parser = { path = "../tlang_parser" }
tlang_semantics = { path = "../tlang_semantics" }
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_diagnostics = { path = "../tlang_diagnostics" }
tlang_vm = { path = "../tlang_core/tlang_vm" }
tlang_defs = { path = "../tlang_defs" }
inventory = { workspace = true }

[lints]
workspace = true
