[package]
name = "tlang_parser"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_ast = { path = "../tlang_ast" }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
env_logger = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
