[package]
name = "tlang_parser"
version = "0.1.0"
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "tlang_ast/serde"]

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_lexer = { path = "../tlang_lexer" }
log = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
ctor = { workspace = true }
env_logger = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
