[package]
name = "tlang_semantics"
version = "0.1.0"
edition.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_span = { path = "../tlang_span" }
serde = { workspace = true, optional = true }

[dev-dependencies]
tlang_parser = { path = "../tlang_parser" }
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
