[package]
name = "tlang_semantics"
version = "0.1.0"
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "tlang_symbols/serde"]

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_span = { path = "../tlang_span" }
tlang_symbols = { path = "../tlang_symbols" }
serde = { workspace = true, optional = true }
log = { workspace = true }

[dev-dependencies]
tlang_parser = { path = "../tlang_parser" }
env_logger = { workspace = true }
ctor = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
