[package]
name = "tlang_typeck"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_diagnostics = { path = "../tlang_diagnostics" }
tlang_span = { path = "../tlang_span" }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
