[package]
name = "tlang_typeck"
version = "0.1.0"
edition.workspace = true

[dependencies]
tlang_ast = { path = "../tlang_ast" }
tlang_defs = { path = "../tlang_defs" }
tlang_hir = { path = "../tlang_hir" }
tlang_hir_opt = { path = "../tlang_hir_opt" }
tlang_diagnostics = { path = "../tlang_diagnostics" }
tlang_span = { path = "../tlang_span" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tlang_parser = { path = "../tlang_parser" }
tlang_ast_lowering = { path = "../tlang_ast_lowering" }
tlang_semantics = { path = "../tlang_semantics" }

[lints]
workspace = true
