[package]
name = "tlang_types"
version = "0.1.0"
edition.workspace = true

[dependencies]
log.workspace = true
tlang_span = { path = "../tlang_span" }
tlang_symbols = { path = "../tlang_symbols" }

[dependencies.serde]
workspace = true
optional = true

[features]
serde = ["dep:serde", "tlang_span/serde", "tlang_symbols/serde"]

