[package]
name = "tlang_interpreter"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_interpreter"
path = "src/lib.rs"

[[bench]]
name = "closure_benchmark"
harness = false

[features]
default = ["stdlib"]
stdlib = ["dep:tlang_stdlib"]

[dependencies]
tlang_ast = { path = "../../tlang_ast" }
tlang_intern = { path = "../../tlang_intern" }
tlang_hir = { path = "../../tlang_hir" }
tlang_macros = { path = "../../tlang_macros" }
tlang_parser = { path = "../../tlang_parser" }
tlang_semantics = { path = "../../tlang_semantics" }
tlang_span = { path = "../../tlang_span" }
tlang_memory = { path = "../tlang_memory" }
tlang_stdlib = { path = "../tlang_stdlib", optional = true }
tlang_hir_opt = { path = "../../tlang_hir_opt" }
log = { workspace = true }
smallvec = "1.15"

[dev-dependencies]
tlang_ast_lowering = { path = "../../tlang_ast_lowering" }
tlang_vm = { path = "../tlang_vm" }
ctor = { workspace = true }
env_logger = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }
criterion = "0.8"

[lints]
workspace = true
