[package]
name = "tlang_stdlib"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_stdlib"
path = "src/lib.rs"

[dependencies]
tlang_macros = { path = "../../tlang_macros" }
tlang_memory = { path = "../tlang_memory" }
inventory = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
temporal_rs = { version = "0.2.1", default-features = false, features = ["compiled_data"] }
timezone_provider = { version = "0.2.3", default-features = false, features = ["tzif"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = { version = "0.9" }

[lints]
workspace = true
