[package]
name = "tlang_gc"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_gc"
path = "src/lib.rs"

[dependencies]
tlang_memory = { path = "../tlang_memory" }
tlang_span = { path = "../../tlang_span" }
log = { workspace = true }
smallvec = "1.15"
indexmap = "2.0"

[features]
default = ["mark_sweep"]
mark_sweep = []
incremental = []
experimental_allocator = []

[lints]
workspace = true