[package]
name = "tlang_gc_integration"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_gc_integration"
path = "src/lib.rs"

[dependencies]
tlang_memory = { path = "../tlang_memory", features = ["gc"] }
tlang_gc = { path = "../tlang_gc" }
tlang_hir = { path = "../../tlang_hir" }
tlang_span = { path = "../../tlang_span" }
log = { workspace = true }
smallvec = "1.15"

[lints]
workspace = true