[package]
name = "tlang_interpreter"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_interpreter"
path = "src/lib.rs"

[[bin]]
name = "tlangdi"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["stdlib"]
binary = ["tlang_ast_lowering"]
stdlib = ["dep:tlang_stdlib"]

[dependencies]
tlang_ast = { path = "../../tlang_ast" }
tlang_ast_lowering = { path = "../../tlang_ast_lowering", optional = true }
tlang_hir = { path = "../../tlang_hir" }
tlang_macros = { path = "../../tlang_macros" }
tlang_parser = { path = "../../tlang_parser" }
tlang_semantics = { path = "../../tlang_semantics" }
tlang_memory = { path = "../tlang_memory" }
tlang_stdlib = { path = "../tlang_stdlib", optional = true }
log = { workspace = true }
env_logger = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
tlang_ast_lowering = { path = "../../tlang_ast_lowering" }
ctor = { workspace = true }
indoc = { workspace = true }
pretty_assertions = { workspace = true }
