[package]
name = "tlang_stdlib"
version = "0.1.0"
edition.workspace = true

[lib]
name = "tlang_stdlib"
path = "src/lib.rs"

[dependencies]
tlang_macros = { path = "../../tlang_macros" }
tlang_memory = { path = "../tlang_memory" }
inventory = { workspace = true }
log = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = { version = "0.10" }

[lints]
workspace = true
